@@ -1,5 +1,8 @@
 2014-02-04  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/60023
+	* g++.dg/vect/pr60023.cc: New test.
+
 	PR ipa/60026
 	* c-c++-common/torture/pr60026.c: New test.
 
